Unit circle labels fade in / out.

--- a/Qubit.html
+++ b/Qubit.html
@@ -109,8 +109,19 @@
 				<div class="unit-circle-spoke-label unit-circle-spoke-label-0">Horizontal</div>
 				<div class="unit-circle-spoke-label unit-circle-spoke-label-315">Anti-diagonal</div>
 				
-				<div class="unit-circle-label unit-circle-label-0">1, 0</div>
-				<div class="unit-circle-label unit-circle-label-45">
+				<!--
+				<div class="unit-circle-label unit-circle-label-angle-0">0˚</div>
+				<div class="unit-circle-label unit-circle-label-angle-45">45˚</div>
+				<div class="unit-circle-label unit-circle-label-angle-90">90˚</div>
+				<div class="unit-circle-label unit-circle-label-angle-135">135˚</div>
+				<div class="unit-circle-label unit-circle-label-angle-180">180˚</div>
+				<div class="unit-circle-label unit-circle-label-angle-225">225˚</div>
+				<div class="unit-circle-label unit-circle-label-angle-270">270˚</div>
+				<div class="unit-circle-label unit-circle-label-angle-315">315˚</div>
+				-->
+
+				<div class="unit-circle-label unit-circle-label-point-0">1, 0</div>
+				<div class="unit-circle-label unit-circle-label-point-45">
 					<table class="division">
 						<tr class="dividend"><td>1</td></tr>
 						<tr class="divisor"><td>√ 2</td></tr>
@@ -120,8 +131,8 @@
 						<tr class="divisor"><td>√ 2</td></tr>
 					</table>
 				</div>
-				<div class="unit-circle-label unit-circle-label-90">0, 1</div>
-				<div class="unit-circle-label unit-circle-label-135">
+				<div class="unit-circle-label unit-circle-label-point-90">0, 1</div>
+				<div class="unit-circle-label unit-circle-label-point-135">
 					<table class="division">
 						<tr class="dividend"><td>-1</td></tr>
 						<tr class="divisor"><td>√ 2</td></tr>
@@ -131,8 +142,8 @@
 						<tr class="divisor"><td>√ 2</td></tr>
 					</table>
 				</div>
-				<div class="unit-circle-label unit-circle-label-180">-1, 0</div>
-				<div class="unit-circle-label unit-circle-label-225">
+				<div class="unit-circle-label unit-circle-label-point-180">-1, 0</div>
+				<div class="unit-circle-label unit-circle-label-point-225">
 					<table class="division">
 						<tr class="dividend"><td>-1</td></tr>
 						<tr class="divisor"><td>√ 2</td></tr>
@@ -142,8 +153,8 @@
 						<tr class="divisor"><td>√ 2</td></tr>
 					</table>
 				</div>
-				<div class="unit-circle-label unit-circle-label-270">0, -1</div>
-				<div class="unit-circle-label unit-circle-label-315">
+				<div class="unit-circle-label unit-circle-label-point-270">0, -1</div>
+				<div class="unit-circle-label unit-circle-label-point-315">
 					<table class="division">
 						<tr class="dividend"><td>1</td></tr>
 						<tr class="divisor"><td>√ 2</td></tr>
