Thinking about circuits.

--- a/Circuit.html
+++ b/Circuit.html
@@ -60,6 +60,24 @@
 			<p>
 				Check back in August 2019.
 			</p>
+			<br><br>
+<pre><code>
+|0⟩ ───○─────○─────○─────○─────○─────○───
+
+     ┌───┐ ┌───┐             ┌───┐ ╭───╮
+|0⟩ ─┤ H ├─┤   ├───○─────○───┤ M ├─┤ B ├─
+     └───┘ │ C │             └───┘ ╰───╯
+     ┌───┐ │   │             ┌───┐ ╭───╮
+|0⟩ ─┤ X ├─┤   ├───○─────○───┤ M ├─┤ B ├─
+     └───┘ └───┘             └───┘ ╰───╯
+
+|0⟩ ───○─────○─────○─────○─────○─────○───
+
+
+|0⟩ ───○─────○─────○─────○─────○─────○───
+</code></pre>
+
+
 		</main>
 	</body>
 </html>
