--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 				ProjectQ, Qiskit, 
 				Quantum Development Kit, Cirq, Strawberry Fields, t|ket>,
 				QCL, Quantum pseudocode, Q#, Q|SI>, Q language, qGCL, QFC, QML, LIQUi|>, Quipper,
+			Stanford CS 269 Q: Quantum Computer Programming,
 			Web, Web site, website, Web browser, browser, HTML, HTML5, JavaScript, ES6, CSS,
 			Stewart Smith, Stewart, Stew, Stuart, Steven, Steve, Stewdio, stew_rtsmith, @stew_rtsmith,
 			Moar, Moar Technologies Corp, MTC,">
@@ -245,6 +246,13 @@
 	.<a href="Qubit.html#.prototype.applyGate">applyGate</a>( <a href="Q.html">Q</a>.<a href="Gate.html">Gate</a>.<a href="Gate.html#.HADAMARD">MEASURE</a> )
 	.<a href="Qubit.html#this.ket">ket</a>.<a href="ComplexNumber.html#.prototype.toText">toText</a>()
 </pre></code>
+			<p>
+				Or if brevity is more your thing, try this super compressed version. 
+				(Note those are backticks, not quotes.)
+			</p>
+<pre><code>
+<a href="Q.html">Q</a>`|0>-H`.<a href="Program.html#.prototype.run">run</a>()
+</code></pre>
 			<p>
 				Did you try it?
 				You just performed the most superfluous coin flip ever.
