SUPER SHORT program syntax.

--- a/Program.html
+++ b/Program.html
@@ -106,15 +106,15 @@ p2.toText() === p.toText()
 				(Note those are backticks, not quotes.)
 			</p>
 <pre><code>
-Q`|0>-H`.run()
+Q`H`.run()
 </code></pre>
 			<p>
 				Or double your pleasure.
 			</p>
 <pre><code>
 Q`
-|0>-H
-|0>-H`.run()
+H
+H`.run()
 </code></pre>			
 			<hr>
 			<p>
