--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 				(Note those are backticks, not quotes.)
 			</p>
 <pre><code>
-<a href="Q.html">Q</a>`|0>-H`.<a href="Program.html#.prototype.run">run</a>()
+<a href="Q.html">Q</a>`H`.<a href="Program.html#.prototype.run">run</a>()
 </code></pre>
 			<p>
 				Did you try it?
