--- a/Matrix.html
+++ b/Matrix.html
@@ -1135,7 +1135,7 @@ new <a href="Q.html">Q</a>.Matrix(<span class="comment">//  Fredkin</span>
 
 
 
-var a = new <a href="Q.html">Q</a>.Matrix(  
+var a = new Q.Matrix(  
 
 	[ 1, 2, 3 ],  
 	[ 4, 5, 6 ]
