--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -510,11 +510,11 @@ cat.<a href="#this.index">index</a> === dog.<a href="#.prototype.index">index</a
 // console.log( '\n\nQ.ComplexNumber\n\n', Q.ComplexNumber.help(), '\n\n' )
 
 var 
-ant = new <a href="Q.html">Q</a>.ComplexNumber(),
-bat = new <a href="Q.html">Q</a>.ComplexNumber( 1 ),
-cat = new <a href="Q.html">Q</a>.ComplexNumber( 1, 2 ),
+ant = new Q.ComplexNumber(),
+bat = new Q.ComplexNumber( 1 ),
+cat = new Q.ComplexNumber( 1, 2 ),
 dog = cat.clone(),//  We’re avoiding a warning here: new <a href="Q.html">Q</a>.ComplexNumber( cat ),
-i   = new <a href="Q.html">Q</a>.ComplexNumber( 0,  1 )
+i   = new Q.ComplexNumber( 0,  1 )
 
 			
 		</script>
